fetching data from db working

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ django = "*"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
